# boondoggle

./: Dockerfile  README.md  cli.py  demo-sheet.xlsx  docker-compose.yml  pom.xml  pyproject.toml  server.py  test.sh
.github/workflows/: docker.yml  tests.yml
bg-compression/: pom.xml
bg-compression/src/main/java/com/github/metriccaution/boondoggle/: ImageFile.java
bg-compression/src/main/java/com/github/metriccaution/boondoggle/compression/: ImageDirectoryCompressor.java  ImageTransform.java  IntermediateImageCompression.java
bg-main/: README.md  pom.xml
bg-main/src/main/java/com/github/metriccaution/boondoggle/: Main.java
bg-poi/: pom.xml
bg-poi/src/main/java/com/github/metriccaution/boondoggle/poi/: ImageFile.java  MultiImageConverter.java
bg-web/: README.md  pom.xml
bg-web/src/main/java/com/github/metriccaution/boondoggle/web/: Main.java
bg-web/src/main/resources/site/: index.html
lib/: image.py  image_test.py  xlsx.py
lib/test_images/: README.md
spare/src/main/java/com/github/metriccaution/boondoggle/: Main.java
spare/src/main/java/com/github/metriccaution/boondoggle/imageGen/: Colourings.java  Generator.java  TestSuite.java
src/main/java/com/github/metriccaution/boondoggle/: Configuration.java  Main.java
src/main/java/com/github/metriccaution/boondoggle/compression/: ImageCompression.java
src/main/java/com/github/metriccaution/boondoggle/imageGen/: ColourMapping.java
src/main/java/com/github/metriccaution/boondoggle/poi/: ImageConverter.java  MultiImageConverter.java
static/: index.html  index.js  style.css
(+14 files in other folders)
